--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     const p_filters = params.getAll('f');  // if f=hide, remove the filters
     const p_count = p_authors.length + p_themes.length + p_venues.length + p_years.length;
 
-    const themes = [undefined, 'Video Understanding', 'Vision for Autonomous Navigation', 'Fundamentals / Tools'];
+    const themes = [undefined, 'Video Understanding', 'Visual Computing for Automation', 'Fundamentals / Tools'];
     const theme_colors = ['light', 'danger', 'primary', 'success'];
     const full_venue = {};
     // const full_venue = { 
